# gcubed-build-switcher

./: .gitignore  AGENTS.md  LICENSE  NEXT-STEP.md  README.md  copilot-brief  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  customer-configuration.env  devcontainer.json
.devcontainer/extensions/: vscode-interpreter-switcher-0.1.0.vsix
.github/: copilot-instructions.md
g-cubed-devcontainer-template/: README.md  pyproject.toml
release-files/: README.md  gcubed-vscode-venv-switcher.vsix  pyproject.toml
src/gcubed_build_switcher/: __init__.py  cli.py  config.py  main.py  messaging.py  packages.py  python_provider.py  venv.py  vscode.py
tests/: test_python_provider.py
vscode-extension/: .gitignore  LICENSE.txt  README-extension-developer.md  README.md  package-lock.json  package.json
vscode-extension/deprecated/python/: pythonExtension.js
vscode-extension/deprecated/server/: serverFactory.js
vscode-extension/production/: gcubed-vscode-venv-switcher.vsix  vscode-interpreter-switcher-0.1.0.vsix
vscode-extension/src/: CircularBuffer.js  extension.js  testUnixSocketServer-client.js  testUnixSocketServer-server.js  testUnixSocketServer.js  unixSocketServer.js
vscode-extension/src/config/: settings.js
vscode-extension/src/handlers/: interpreterHandler.js  socketRequestHandler.js
vscode-extension/src/protocols/: serverFactory.js
vscode-extension/src/python/: pythonExtension.js
vscode-extension/src/server/: httpServer.js  serverInterface.js  socketServer.js
vscode-extension/src/unixSocketServer/: constants.js  index.js  (+6 more)
(+36 files in other folders)
